# server/src/main/java/io/arknights/dateorfriends/modules/user/auth/controller/RegisterResponse.java
@@ -1,0 +1,9 @@
+package io.arknights.dateorfriends.modules.user.auth.controller;
+
+public record RegisterResponse(
+        long userId,
+        String account,
+        String email,
+        String nickname
+) {
+}
